--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@ title: Home
 <html>
 <body>
 <h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
+<p>Interesting information coming soon hopefully...</p>
 </body>
 </html>
