--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Intern</h3>
                             <div class="subheading mb-3">Cisco</div>
-                            <p>Collaboratively administrate empowered markets via plug-and-play networks. Dynamically procrastinate B2C users after installed base benefits. Dramatically visualize customer directed convergence without revolutionary ROI.</p>
+                            <p>Networks.</p>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">September 2008 - June 2010</span></div>
                     </div>
